[tool.poetry]
name = "stockinsight"
version = "0.1.0"
description = "This project is a FastAPI application that provides daily stock price data using the AlphaVantage API. It includes lookup, min, and max endpoints for querying stock data, with a lazy-loaded cache to optimize performance."
authors = ["chai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
requests = "^2.31.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
